Update state.json with last audit timestamp and refactor tests to use bun:test
- Set "last_audit_at" in .control/state.json to "2026-02-25T16:28:54Z".
- Refactor test files across multiple packages to replace node:test with bun:test, ensuring consistency in testing framework usage.
- Update assertions in tests to use expect() syntax for better readability and maintainability.

This commit enhances the state management and improves the testing framework across the codebase.

--- a/packages/kernel-integration/package.json
+++ b/packages/kernel-integration/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@agentio/kernel-state",
+  "name": "@agentio/kernel-integration",
   "version": "0.1.0",
   "private": true,
-  "description": "State manager — aggregate run, artifact, and event state into a coherent view",
+  "description": "Integration tests — cross-kernel composition and end-to-end flows",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@agentio/protocol": "workspace:*",
-    "@agentio/kernel-run": "workspace:*"
+    "@agentio/kernel-run": "workspace:*",
+    "@agentio/kernel-policy": "workspace:*",
+    "@agentio/kernel-artifact": "workspace:*",
+    "@agentio/kernel-state": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.7.0"
