Enhance agent state management and chat-bot functionality
- Updated core.json and index.json to include entries for the last demo and demo run ID, improving state tracking.
- Modified agent.json to log recent decisions, including the execution of the E2E demo, enhancing decision traceability.
- Updated session.json to include session ID and timestamps for better session management.
- Refactored chat-bot to implement a Bun HTTP server, providing a structured API for health checks and chat interactions.
- Added comprehensive tests for the chat-bot's request handling, ensuring robust error handling and response validation.
- Introduced new server.ts file to encapsulate server logic, improving code organization and maintainability.

This commit enhances the overall functionality and reliability of the agent and chat-bot components, ensuring better state management and user interaction capabilities.

--- a/apps/cli-agent/package.json
+++ b/apps/cli-agent/package.json
@@ -2,17 +2,21 @@
   "name": "@agentio/cli-agent",
   "version": "0.1.0",
   "private": true,
-  "description": "CLI agent — interactive command-line interface for agent runs",
+  "description": "CLI agent — interactive command-line interface with streaming",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
     "lint": "tsc --noEmit",
     "typecheck": "tsc --noEmit",
+    "start": "bun run src/index.ts",
     "test": "bun test __tests__/*.test.ts"
   },
   "dependencies": {
-    "@agentio/agent-runtime": "workspace:*"
+    "@agentio/agent-runtime": "workspace:*",
+    "@agentio/protocol": "workspace:*",
+    "ai": "^6.0.0",
+    "@ai-sdk/anthropic": "^3.0.0"
   },
   "devDependencies": {
     "typescript": "^5.7.0"
