--- a/packages/agent-runtime/package.json
+++ b/packages/agent-runtime/package.json
@@ -15,9 +15,14 @@
     "@agentio/protocol": "workspace:*",
     "@agentio/kernel-run": "workspace:*",
     "@agentio/kernel-policy": "workspace:*",
+    "@agentio/kernel-schema": "workspace:*",
+    "@agentio/kernel-state": "workspace:*",
+    "@agentio/kernel-artifact": "workspace:*",
     "@agentio/skills-runtime": "workspace:*",
     "@agentio/driver-exec": "workspace:*",
-    "@agentio/driver-mcp": "workspace:*"
+    "@agentio/driver-mcp": "workspace:*",
+    "ai": "^6.0.0",
+    "@ai-sdk/anthropic": "^3.0.0"
   },
   "devDependencies": {
     "typescript": "^5.7.0"
